--- a/src/CSS/Style.css
+++ b/src/CSS/Style.css
@@ -742,15 +742,30 @@ body {
 .flower__g-right .leaf {
     width: 30vmin;
     height: 50vmin;
+
     border-top-left-radius: 100%;
     border-left: 2vmin solid #217005;
+
+    
+    background-color: #24803e;
+
+    
     background-image: linear-gradient(
         to bottom,
         transparent,
         var(--dark-color) 60%
     );
-    -webkit-mask-image: linear-gradient(to top, transparent 30%, #24803e 60%);
+
+    
+    -webkit-mask-image: linear-gradient(to top, transparent 30%, white 60%);
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-size: cover;
+
+    mask-image: linear-gradient(to top, transparent 30%, white 60%);
+    mask-repeat: no-repeat;
+    mask-size: cover;
 }
+
 .flower__g-right--1 {
     -webkit-animation: flower-g-right-ans 2.5s linear infinite;
     animation: flower-g-right-ans 2.5s linear infinite;
@@ -1006,36 +1021,40 @@ body {
     height: 50vmin;
     border-top-left-radius: 100%;
     border-left: 2vmin solid #147b47;
-    -webkit-mask-image: linear-gradient(to top, transparent 25%, #0e4e2a 50%);
+    
+    -webkit-mask-image: linear-gradient(to top, transparent 25%, white 50%);
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-size: cover;
+    
+    mask-image: linear-gradient(to top, transparent 25%, white 50%);
+    mask-repeat: no-repeat;
+    mask-size: cover;
+
     position: relative;
     z-index: 1;
 }
+
 .flower__g-fr__leaf {
     position: absolute;
     top: 0;
     left: 0;
     width: 10vmin;
     height: 10vmin;
-    border-radius: 100% 0% 0% 100%/100% 100% 0% 0%;
+    border-radius: 100% 0% 0% 100% / 100% 100% 0% 0%;
     box-shadow: inset 0 2px 1vmin hsla(184deg, 97%, 58%, 0.2);
-    background-image: linear-gradient(
-            to bottom left,
-            transparent,
-            var(--dark-color) 98%
-        ),
-        linear-gradient(
-            to bottom right,
-            #106e18 45%,
-            transparent 50%,
-            transparent
-        );
-    -webkit-mask-image: linear-gradient(
-        135deg,
-        #175f22 40%,
-        transparent 50%,
-        transparent
-    );
+    background-image: 
+        linear-gradient(to bottom left, transparent, var(--dark-color) 98%),
+        linear-gradient(to bottom right, #106e18 45%, transparent 50%, transparent);
+    
+    -webkit-mask-image: linear-gradient(135deg, white 40%, transparent 50%, transparent);
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-size: cover;
+
+    mask-image: linear-gradient(135deg, white 40%, transparent 50%, transparent);
+    mask-repeat: no-repeat;
+    mask-size: cover;
 }
+
 .flower__g-fr__leaf--1 {
     left: 20vmin;
     transform: rotate(45deg);
@@ -1163,11 +1182,8 @@ body {
     transform: scale(0.8) rotate(-5deg);
 }
 .long-g--1 .leaf {
-    -webkit-mask-image: linear-gradient(
-        to top,
-        transparent 40%,
-        #196d2a 80%
-    ) !important;
+    -webkit-mask-image: linear-gradient(to top, transparent 40%, white 80%) !important;
+    mask-image: linear-gradient(to top, transparent 40%, white 80%) !important;
 }
 .long-g--1 .leaf--1 {
     --w: 5vmin;
@@ -1187,9 +1203,16 @@ body {
     -webkit-mask-image: linear-gradient(
         to top,
         transparent 50%,
-        #176220 80%
+        white 80%
+    ) !important;
+
+    mask-image: linear-gradient(
+        to top,
+        transparent 50%,
+        white 80%
     ) !important;
 }
+
 .long-g--2 .leaf--1,
 .long-g--3 .leaf--1 {
     left: -1vmin;
@@ -1203,9 +1226,16 @@ body {
     -webkit-mask-image: linear-gradient(
         to top,
         transparent 40%,
-        #176220 80%
+        white 80%
+    ) !important;
+
+    mask-image: linear-gradient(
+        to top,
+        transparent 40%,
+        white 80%
     ) !important;
 }
+
 .long-g--4 {
     left: 25vmin;
     bottom: -3vmin;
@@ -1216,9 +1246,16 @@ body {
     -webkit-mask-image: linear-gradient(
         to top,
         transparent 50%,
-        #176220 80%
+        white 80%
+    ) !important;
+
+    mask-image: linear-gradient(
+        to top,
+        transparent 50%,
+        white 80%
     ) !important;
 }
+
 .long-g--5 {
     left: 42vmin;
     bottom: 0vmin;
@@ -1249,13 +1286,21 @@ body {
     height: var(--h);
     border-top-left-radius: 100%;
     border-left: 2vmin solid var(--c);
+    
     -webkit-mask-image: linear-gradient(
         to top,
         transparent 20%,
-        var(--dark-color)
+        white 100%
     );
+    mask-image: linear-gradient(
+        to top,
+        transparent 20%,
+        white 100%
+    );
+    
     transform-origin: bottom center;
 }
+
 .long-g .leaf--0 {
     left: 2vmin;
     -webkit-animation: leaf-ans-1 4s linear infinite;
