--- a/src/CSS/Style3.css
+++ b/src/CSS/Style3.css
@@ -1,18 +1,19 @@
-/* Fundo animado com estrelas em CSS puro */
 body {
   margin: 0;
   padding: 0;
-  background: #000;
+  background: black;
   overflow: hidden;
   font-family: 'Satisfy', cursive;
-  color: #fff;
+  color: white;
 }
 
-/* Camadas de estrelas */
+/* Estrelas em camadas animadas */
 #stars, #stars2, #stars3 {
   position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-repeat: repeat;
   background-position: 0 0;
   z-index: 0;
@@ -39,11 +40,14 @@ body {
 }
 
 @keyframes moveStars {
-  from { background-position: 0 0; }
-  to { background-position: -10000px 5000px; }
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: -10000px 5000px;
+  }
 }
 
-/* Conteúdo com o texto */
 .content {
   position: relative;
   z-index: 1;
@@ -62,7 +66,6 @@ body {
   min-height: 300px;
 }
 
-/* Botão */
 #restartBtn {
   margin-top: 40px;
   padding: 12px 24px;
