--- a/src/CSS/Style3.css
+++ b/src/CSS/Style3.css
@@ -7,15 +7,13 @@ body {
   color: white;
 }
 
-/* Estrelas em camadas animadas */
 #stars, #stars2, #stars3 {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 200%;
+  height: 200%;
   background-repeat: repeat;
-  background-position: 0 0;
   z-index: 0;
 }
 
@@ -41,10 +39,10 @@ body {
 
 @keyframes moveStars {
   from {
-    background-position: 0 0;
+    transform: translate(0, 0);
   }
   to {
-    background-position: -10000px 5000px;
+    transform: translate(-50%, -50%);
   }
 }
 
