--- a/src/CSS/Style3.css
+++ b/src/CSS/Style3.css
@@ -71,7 +71,7 @@ video {
   background-image: url("https://www.transparenttextures.com/patterns/stardust.png");
   opacity: 0.5;
 }
-#stars2 {
+/*#stars2 {
   background-image: url("https://www.transparenttextures.com/patterns/dark-mosaic.png");
   opacity: 0.3;
   animation-duration: 160s;
@@ -80,7 +80,7 @@ video {
   background-image: url("https://www.transparenttextures.com/patterns/tiny-grid.png");
   opacity: 0.2;
   animation-duration: 240s;
-}
+}*/
 
 @keyframes moveStars {
   from { transform: translate(0, 0); }
