--- a/src/CSS/Style3.css
+++ b/src/CSS/Style3.css
@@ -54,7 +54,7 @@ video {
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.6);
 }
 
-/* Star animation */
+/* Star animation atualizada */
 #stars, #stars2, #stars3 {
   position: fixed;
   top: 0;
@@ -62,27 +62,33 @@ video {
   width: 100%;
   height: 100%;
   background-repeat: repeat;
-  background-size: contain;
   z-index: 0;
   animation: moveStars 100s linear infinite;
+  background-attachment: fixed;
 }
 
+/* Camada 1 */
 #stars {
   background-image: url("https://www.transparenttextures.com/patterns/stardust.png");
   opacity: 0.5;
+  animation-duration: 100s;
 }
+
+/* Camada 2 */
 /*#stars2 {
   background-image: url("https://www.transparenttextures.com/patterns/dark-mosaic.png");
   opacity: 0.3;
-  animation-duration: 160s;
+  animation-duration: 200s;
 }*/
+
+/* Camada 3 */
 #stars3 {
   background-image: url("https://www.transparenttextures.com/patterns/tiny-grid.png");
   opacity: 0.2;
-  animation-duration: 240s;
+  animation-duration: 300s;
 }
 
 @keyframes moveStars {
   from { transform: translate(0, 0); }
-  to { transform: translate(-1000px, -1000px); }
+  to { transform: translate(-5000px, -5000px); }
 }
