--- a/src/CSS/Style3.css
+++ b/src/CSS/Style3.css
@@ -21,40 +21,11 @@ body {
 #typewriter {
   font-size: 1.8rem;
   white-space: pre-line;
-  color: rgb(156, 156, 156) ;
+  color: rgb(156, 156, 156);
   text-shadow: 1px 1px 2px white;
 }
 
-button {
-  margin-top: 20px;
-  padding: 10px 25px;
-  font-size: 1.1rem;
-  border: none;
-  border-radius: 8px;
-  background-color: #ffffff;
-  color: black;
-  cursor: pointer;
-  box-shadow: 0 0 10px #fff;
-  transition: transform 0.2s ease;
-}
-
-button:hover {
-  transform: scale(1.05);
-}
-
-#videoContainer {
-  margin-top: 30px;
-}
-
-video {
-  width: 100%;
-  max-width: 800px;
-  border: 2px solid white;
-  border-radius: 12px;
-  box-shadow: 0 0 20px rgba(255, 255, 255, 0.6);
-}
-
-/* Star animation corrigida */
+/* Estrelas animadas */
 #stars, #stars2, #stars3 {
   position: fixed;
   top: 0;
@@ -71,21 +42,20 @@ video {
 #stars {
   background-image: url("https://www.transparenttextures.com/patterns/stardust.png");
   opacity: 0.5;
-  animation: animateStars 100s linear infinite;
 }
 
 /* Camada 2 
 #stars2 {
   background-image: url("https://www.transparenttextures.com/patterns/dark-mosaic.png");
   opacity: 0.3;
-  animation: animateStars 160s linear infinite;
+  animation-duration: 160s;
 }*/
 
 /* Camada 3 */
 #stars3 {
   background-image: url("https://www.transparenttextures.com/patterns/tiny-grid.png");
   opacity: 0.2;
-  animation: animateStars 240s linear infinite;
+  animation-duration: 240s;
 }
 
 @keyframes animateStars {
@@ -96,4 +66,3 @@ video {
     background-position: -1000px -1000px;
   }
 }
-
